// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhraseCard Component Snapshots matches default variant snapshot 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-152yur6-MuiPaper-root-MuiCard-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div
    class="MuiBox-root css-oy3rny"
  >
    <div>
      FormatQuoteIcon
    </div>
  </div>
  <div
    class="MuiCardContent-root css-rnega1-MuiCardContent-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1salclq-MuiTypography-root"
    >
      Esta es una frase de prueba para el componente
    </p>
  </div>
  <button
    aria-label="Eliminar frase"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-2wse5v-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <div>
      CloseIcon
    </div>
  </button>
</div>
`;

exports[`PhraseCard Component Snapshots matches deleted variant snapshot 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-16b9zzk-MuiPaper-root-MuiCard-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div
    class="MuiBox-root css-oy3rny"
  >
    <div>
      FormatQuoteIcon
    </div>
  </div>
  <div
    class="MuiCardContent-root css-rnega1-MuiCardContent-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1salclq-MuiTypography-root"
    >
      Esta es una frase de prueba para el componente
    </p>
  </div>
  <button
    aria-label="Restaurar frase"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-vrkvbn-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <div>
      UndoIcon
    </div>
  </button>
</div>
`;

exports[`PhraseCard Component Snapshots matches snapshot without actions 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-152yur6-MuiPaper-root-MuiCard-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div
    class="MuiBox-root css-oy3rny"
  >
    <div>
      FormatQuoteIcon
    </div>
  </div>
  <div
    class="MuiCardContent-root css-rnega1-MuiCardContent-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1salclq-MuiTypography-root"
    >
      Esta es una frase de prueba para el componente
    </p>
  </div>
</div>
`;
